--- a/Controlium.net/Controlium.net.csproj
+++ b/Controlium.net/Controlium.net.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0-windows</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>TeamControlium.Controlium</AssemblyName>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>2.0.0</Version>
+    <Version>2.0.1</Version>
     <Authors>TeamControlium Contributors</Authors>
     <Company>TeamControlium Contributors</Company>
     <Product>Team Controlium Controlium.net</Product>
@@ -16,11 +16,9 @@
     <RepositoryUrl>https://github.com/TeamControlium/Controlium.net.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>TeamControlium testautomation functional library</PackageTags>
-    <PackageReleaseNotes>Updated to .NET5.0</PackageReleaseNotes>
+    <PackageReleaseNotes>Removed code to deal with Credential Dialogs.  This messes with .NET5.0 so consumer apps need .NET5.0-Windows-7 which is bad.  Will work out way to incorporate later.</PackageReleaseNotes>
     <NeutralLanguage>en-AU</NeutralLanguage>
     <RootNamespace>TeamControlium.Controlium</RootNamespace>
-	<UseWPF>true</UseWPF>
-	<UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
   <ItemGroup>
