--- a/Controlium.net/Controlium.net.csproj
+++ b/Controlium.net/Controlium.net.csproj
@@ -37,7 +37,8 @@ Fixed minor issues reported by users</PackageReleaseNotes>
   <ItemGroup>
     <PackageReference Include="Selenium.Support" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
-    <PackageReference Include="TeamControlium.Utilities" Version="2.0.4" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
+    <PackageReference Include="TeamControlium.Utilities" Version="2.0.6" />
   </ItemGroup>
 
   <ItemGroup>
